@@ -57,10 +57,17 @@ PROVIDENAME     = 1047
 REQUIRENAME     = 1049
 RPMVERSION      = 1064
 TRIGGERSCRIPTS  = 1065
+TRIGGERNAME     = 1066
+TRIGGERVERSION  = 1067
+TRIGGERFLAGS    = 1068 # bitmask: RPMSENSE_* are bitmasks to interpret
+TRIGGERINDEX    = 1069
+VERIFYSCRIPT    = 1079
 PREINPROG       = 1085
 POSTINPROG      = 1086
 PREUNPROG       = 1087
 POSTUNPROG      = 1088
+VERIFYSCRIPTPROG = 1091
+TRIGGERSCRIPTPROG = 1092
 DIRINDEXES      = 1116
 BASENAMES       = 1117
 DIRNAMES        = 1118
@@ -106,6 +113,17 @@ RPMVERIFY_MODE       = (1 << 6)
 RPMVERIFY_RDEV       = (1 << 7)
 RPMVERIFY_CAPS       = (1 << 8)
 RPMVERIFY_CONTEXTS   = (1 << 15)
+
+# TRIGGERFLAGS bitmask elements -- not all rpmsenseFlags make sense
+# in TRIGGERFLAGS
+RPMSENSE_ANY           = 0
+RPMSENSE_LESS          = (1 << 1)
+RPMSENSE_GREATER       = (1 << 2)
+RPMSENSE_EQUAL         = (1 << 3)
+RPMSENSE_TRIGGERIN     = (1 << 16)
+RPMSENSE_TRIGGERUN     = (1 << 17)
+RPMSENSE_TRIGGERPOSTUN = (1 << 18)
+RPMSENSE_TRIGGERPREIN  = (1 << 25)
 
 
 def seekToData(f):
